logs/dag_id=real_estate_data_pipeline/run_id=manual__2023-02-04T00:32:58.305003+00:00/task_id=create_db/attempt=2.log
[2023-02-04T00:38:03.204+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: real_estate_data_pipeline.create_db manual__2023-02-04T00:32:58.305003+00:00 [queued]>
[2023-02-04T00:38:03.214+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: real_estate_data_pipeline.create_db manual__2023-02-04T00:32:58.305003+00:00 [queued]>
[2023-02-04T00:38:03.215+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-02-04T00:38:03.215+0000] {taskinstance.py:1363} INFO - Starting attempt 2 of 2
[2023-02-04T00:38:03.216+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-02-04T00:38:03.225+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): create_db> on 2023-02-04 00:32:58.305003+00:00
[2023-02-04T00:38:03.230+0000] {standard_task_runner.py:54} INFO - Started process 2480 to run task
[2023-02-04T00:38:03.239+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'real_estate_data_pipeline', 'create_db', 'manual__2023-02-04T00:32:58.305003+00:00', '--job-id', '1305', '--raw', '--subdir', 'DAGS_FOLDER/real_estate_dag.py', '--cfg-path', '/tmp/tmpcqi7cxfi']
[2023-02-04T00:38:03.241+0000] {standard_task_runner.py:83} INFO - Job 1305: Subtask create_db
[2023-02-04T00:38:03.250+0000] {dagbag.py:525} INFO - Filling up the DagBag from /opt/***/dags/real_estate_dag.py
[2023-02-04T00:38:03.265+0000] {dagbag.py:330} ERROR - Failed to import: /opt/***/dags/real_estate_dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/dagbag.py", line 326, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/real_estate_dag.py", line 86
    CREATE TABLE IF NOT EXISTS housing_market_data (
         ^
SyntaxError: invalid syntax
[2023-02-04T00:38:03.269+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1305 for task create_db (Dag 'real_estate_data_pipeline' could not be found; either it does not exist or it failed to parse.; 2480)
[2023-02-04T00:38:03.289+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-02-04T00:38:03.311+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
